sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:15: error: ';' expected but ',' found.
        a = 1,
             ^