sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  var i=0;
  var n = 0;
  var a = 0;
  
  
  do {
    a = 0
    for (n <- 0 to getNombreValeurs()) {
      
      if(plusPetit(i, i+1 ) == false) {
        echange(i, i+1);
        a = 1,

        if (i > 0 ) {
          i -= 1;
        }

      }
      
      i += 1
      
    }
    
    
    
  } while ( i <= getNombreValeurs())
  
  
  
}